# traceml

./: .coderabbit.yaml  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  BENCHMARKING.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  combine_logs.py  contribution.md  mkdocs.yml  pyproject.toml  traceml_architecture_DDP_v1.html
.devcontainer/: devcontainer.json
.git-hooks/: block-workflow-artifacts.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  design_doc.md  feature_request.md  feature_request.yml  i_found_a_bottleneck.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  publish.yml  release.yml  test.yml
benchmarking/: BENCHMARKING.md  README.md
benchmarking/analysis/: README.md
benchmarking/perf_benchmark/: .gitignore  README.md
benchmarking/wallclock_overhead/: README.md  ddp_mlp_e2e.py
benchmarking/workloads/: README.md  ddp_mlp_e2e.py
benchmarks/: README.md  run_overhead.py
benchmarks/workloads/: ddp_mlp_e2e.py  ddp_mlp_overhead.py
checkpoints/: epoch=0-step=2.ckpt
docs/: LLM_PROMPT.txt  faq.md  huggingface.md  index.md  lightning.md  quickstart.md  use-with-wandb-mlflow.md  wandb.md
docs/developer_guide/: architecture.md  contributing.md  extending.md  rank-straggler-policy.md
docs/guides/: ddp-slow-training-rank-straggler.md  low-gpu-utilization-pytorch.md  pytorch-dataloader-bottleneck.md  pytorch-input-pipeline-bottleneck.md  pytorch-memory-creep.md  slow-pytorch-training.md
docs/stylesheets/: traceopt.css
docs/user_guide/: compare.md  distributed-training.md  faq.md  integrations.md  public-api.md  quickstart.md  reading-output.md  slurm.md
examples/: README.md  all_reduce_demo.py  dataloader_bottleneck_demo.py  ddp_comm_hook_demo.py  ddp_minimal.py  ddp_rank_straggler_demo.py  h2d_timing_demo.py  huggingface_trainer_minimal.py  input_bound_demo.py  input_straggler_ddp_demo.py  lightning_minimal.py  manual_custom_minimal.py  pytorch_minimal.py  quickstart.py  ray_lightning_traceml_text_classifier.py  ray_torchtrainer_minimal.py  summary_logging_minimal.py
examples/advanced/: bert_gradient_accum.py  bert_single_gpu_compare.py  fsdp_minimal_cuda.py  huggingface_vision_vit.py
examples/case_studies/: README.md
examples/comparisons/: FIXTURE.md  README.md  make_figures.py  parse_results.py  run_bare.py  run_torch_profiler.py  study_driver.sh  train_traceml.py  workload_core.py
examples/diagnosis/: dataloader_bottleneck_demo.py  h2d_timing_demo.py
examples/distributed/: ddp_rank_straggler_demo.py
examples/integrations/: deepspeed_config_minimal.json  deepspeed_minimal.py
examples/ray/: lightning_text_classifier.py  torchtrainer_minimal.py
examples/slurm/: README.md  launch.sh  traceml_ddp.sbatch
notebooks/: README.md  data_loading_bottleneck.ipynb
perf_benchmark/: README.md
perf_benchmark/common/: stats.py
perf_benchmark/phase2_design/: experiment_matrix.md
perf_benchmark/phase3_benchmark/: aggregate_results.py  run_benchmark.py
rfcs/: 0001-surface-and-attribute-native-crashes.md  README.md  template.md
specs/: 2026-04-19-dev-docs-site-design.md
specs/plans/: 2026-04-19-dev-docs-site-plan.md
src/examples/: bert_gradient_accum.py  bert_single_gpu.py  cnn_mnist.py  ddp_example.py  fsdp_gpu_example.py  hf-trainer-minimal.py  hf_trainer_integration.py  hf_trainer_vision.py  llama_finetuning.py  minimal-single-gpu.py  straggler_ddp_example.py  test.py  test_lightning_traceml.py  tracing_bert_notebook.ipynb  tracing_example.py  tracing_on_ViT.py  tracing_on_bert.py  (+8 more)
tests/: batch_size_demo.py  bench_decode.py  bench_tcp_drain.py  conftest.py  large_dl_example.py  large_model_example.py  test_aggregator_loop.py  test_all_reduce_patch.py  test_base_renderer_contracts.py  test_batch_size_sampler.py  test_compare_missing.py  test_core_protocols.py  test_ddp_comm_hook.py  test_diagnostic_registry.py  test_diagnostics_rule_units.py  test_final_report_generator.py  test_grad_accum.py  test_h2d_timing.py  test_hf_trainer.py  test_init_and_wrappers.py  test_initialization_and_wrappers.py  test_instrumentation_namespace.py  test_launcher_modules.py  test_msgpack_roundtrip.py  test_param_estimator.py  test_runtime_executor.py  test_sampler_registry.py  test_seq_counter.py  test_step_memory_diagnostics_package.py  test_step_memory_formatter.py  test_step_memory_summary_section.py  test_step_time_summary.py  test_summary_section_fixtures.py  test_system_process_sections.py  test_tcp_buffer_perf.py  test_telemetry_publisher.py  test_trace_session_state.py  test_wandb_integration.py
(+849 files in other folders)
