[project]
name = "traceml-ai"
version = "0.1.8"

description = "TraceML: Lightweight ML Profiler"
authors = [{ name = "Abhinav Srivastav", email = "abhinavsriva@gmail.com" }]
readme = "README.md"
license = { text = "MIT License" }
requires-python = ">=3.9"


# Runtime dependencies
dependencies = [
    "rich>=12.0.0",
    "psutil>=5.0.0",
    "torch>=2.5.0",
    "pynvml>=11.5.0",
    "scikit-learn>=1.3.0",
    "numpy<2",
    "pandas>=2.0.0",
    "pytest>=8.4.1",
    "coverage>=7.10.5",
    "pytest-cov>=7.0.0",
    "ipython>=7.0.0",
    "ipywidgets>=7.5.0",
    "nicegui",
    "plotly"

]

[project.optional-dependencies]
dev = [
    "black>=25.0.0",
    "flake8>=7.0.0",
    "pytest>=8.0.0",
    "datasets",
    "transformers",
]

[project.scripts]
traceml = "traceml.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
