[project]
name = "traceml-ai"
version = "0.2.1"

description = "TraceML: Lightweight training runtime health monitor."
authors = [{ name = "Abhinav Srivastav", email = "abhinav@traceopt.ai" }]
readme = "README.md"
license = { text = "Apache 2.0" }
requires-python = ">=3.10"


# Runtime dependencies
dependencies = [
    "rich>=12.0.0",
    "psutil>=5.0.0",
    "pynvml>=11.5.0",
    "scikit-learn>=1.3.0",
    "numpy<2",
    "pandas>=2.0.0",
    "ipython>=7.0.0",
    "ipywidgets>=7.5.0",
    "nicegui",
    "plotly",
    "msgspec",
]

[project.optional-dependencies]
torch = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
]
dev = [
    "black>=26.1.0",
    "ruff>=0.14.14",
    "isort>=7.0.0",
    "pre-commit",
    "codespell>=2.4.1",
    "nbstripout",
    "pytest>=8.0.0",
    "coverage>=7.10.5",
    "pytest-cov>=7.0.0",
    "datasets",
    "transformers",
]

hf = [
    "transformers",
    "accelerate>=0.26.0",
]


[tool.isort]
profile = "black"
line_length = 79

[tool.black]
line-length = 79
target-version = ['py39']

[tool.ruff]
line-length = 79

[project.scripts]
traceml = "traceml.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
