[project]
name = "traceml-ai"
version = "0.3.2"

description = "TraceML: Lightweight runtime bottleneck diagnostics for PyTorch training."
authors = [{ name = "OptAI UG (haftungsbeschränkt)", email = "support@traceopt.ai" }]
maintainers = [{ name = "OptAI UG (haftungsbeschränkt)", email = "support@traceopt.ai" }]
readme = "README.md"
license = { text = "Apache 2.0" }
requires-python = ">=3.10"

keywords = [
    "pytorch",
    "profiler",
    "gpu",
    "training",
    "bottleneck",
    "cuda",
    "dataloader",
    "observability",
    "machine-learning",
    "deep-learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Environment :: GPU :: NVIDIA CUDA",
]


# Runtime dependencies
dependencies = [
    "rich>=12.0.0",
    "psutil>=5.0.0",
    "nvidia-ml-py",
    "numpy<2",
    "msgspec",
    "pyyaml>=6.0",
]

[project.optional-dependencies]

dashboard = [
    "nicegui",
    "plotly",
]

torch = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
]
dev = [
    "black>=26.1.0",
    "ruff>=0.14.14",
    "isort>=7.0.0",
    "pre-commit",
    "codespell>=2.4.1",
    "nbstripout",
    "pytest>=8.0.0",
    "coverage>=7.10.5",
    "pytest-cov>=7.0.0",
    "datasets",
    "transformers",
]

hf = [
    "transformers",
    "accelerate>=0.26.0",
]

lightning = [
    "lightning>=2.6.0",
]

ray = [
    "ray[train]>=2.0.0",
]

docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    "mkdocs-autorefs>=1.2",
    "mkdocs-include-markdown-plugin>=7.0",
]


[tool.isort]
profile = "black"
line_length = 79

[tool.black]
line-length = 79
target-version = ['py310']

[tool.ruff]
line-length = 79

[project.scripts]
traceml = "traceml_ai.launcher.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Offline-bundled dashboard fonts must ship in the wheel (served at runtime by
# the NiceGUI driver); without this they fall back to the system font stack.
traceml_ai = ["aggregator/display_drivers/assets/fonts/*.woff2"]
